<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin_text_empty"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUsernameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/background_border_radius"
            android:padding="@dimen/medium_padding"
            android:text="@string/username_bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvBalanceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/background_border_radius"
            android:padding="@dimen/medium_padding"
            android:text="@string/balance_bold"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/background_border_radius"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_margin"
                android:hint="@string/content_description_coupon"
                android:padding="@dimen/medium_padding"
                app:startIconContentDescription="Coupon"
                app:startIconDrawable="@drawable/ic_coupon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddCoupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddCoupon"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/apply_coupon" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/couponProgressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>